@@ -1,3 +1,7 @@
+trunk
+- Windows: fix old scroll bug which reappeared on Windows 7
+- added Russian translation
+
 version 0.9.9.530
 - fix some focus and focus-stealing problems
 - improve the way the standard browser is found
